--- a/ToDo.txt
+++ b/ToDo.txt
@@ -2,10 +2,8 @@
 
 2. fixa footer
 
-3. dela upp css på flera *.css
+3. dela upp css pï¿½ flera *.css
 
 4. eget javascripit till slide.
-
-5. centrera innehållet i .produkter klassen. (padding: auto; ???)
 
 6.
